# iotAudioPredict

./: .gitignore  README.md  pyproject.toml
data/raw/: README.md
docs/: IoT_Soundbox_Audio_Detection_Article_README.md  IoT_Soundbox_Audio_Detection_Medium_Article.docx
iot_soundbox_audio_id/: __init__.py  dataset_builder.py  realtime_inference.py  train_audio_mps.py
models/: iot_soundbox_audio_cnn.pth
