[project]
name = "iot-soundbox-audio-id"
version = "0.1.0"
description = "Audio identification pipeline for IoT Soundbox end-of-line acoustic verification."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "librosa>=0.11.0,<0.12",
    "numpy>=1.26,<3",
    "pyaudio>=0.2.14,<0.3",
    "soundfile>=0.13.1,<0.14",
    "torch>=2.2",
]

[project.scripts]
soundbox-build = "iot_soundbox_audio_id.dataset_builder:main"
soundbox-train = "iot_soundbox_audio_id.train_audio_mps:main"
soundbox-infer = "iot_soundbox_audio_id.realtime_inference:main"
build-soundbox-dataset = "iot_soundbox_audio_id.dataset_builder:main"
train-soundbox-audio = "iot_soundbox_audio_id.train_audio_mps:main"
run-soundbox-inference = "iot_soundbox_audio_id.realtime_inference:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["iot_soundbox_audio_id*"]

[tool.uv]
package = true
